@@ -1,3 +1,8 @@
+2004-10-21  Vincent Noel  <vnoel@cox.net>
+
+	* logview.c (logview_menus_set_state): extract the sensitivity
+	logic for menus. Other code clean-ups.
+
 2004-10-20  Vincent Noel  <vnoel@cox.net>
 
 	* log_repaint.c (UpdateStatusArea): Use status bar.
